--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,83 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Admin Webapp</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-</head>
-<body>
 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Dashboard</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Login<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Super Admin</a></li>
-            <li><a href="#">Admin</a></li>
-            <li><a href="#">Customer Support</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Accounting</a></li>
-            <li><a href="#">Driver</a></li>
-            <li><a href="#">Shift Supervisor</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">FAQ</a></li>
-        <li><a href="#">Contact</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Link<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Home</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-<div class="jumbotron text-center">
-  <h1>Welcome to Jonnyfresh Admin Website</h1>
-  <p class="uppercase">Your dry Cleaning and Lanundry!</p>
-</div>
-
-<div class="container">
-  <h2>Please select your login </h2>
-  <div class="row">
-    <div class="col-sm-1" style="background-color:lavender;"><h3>Admin</h3></div>
-    <div class="col-sm-2" style="background-color:lavenderblush;"><h3>Customer Support</h3></div>
-    <div class="col-sm-3" style="background-color:lavender;"><h3>Accounting</h3></div>
-    <div class="col-sm-4" style="background-color:lavenderblush;"><h3>Drivers</h3></div>
-    <div class="col-sm-1" style="background-color:lavender;"><h3>Shift Supervisor</h3></div>
-  </div>
-</div>
+<script>
+  $(document).ready(function(){
+    $('.dropdown a.test').on("click", function(e){
+      $(this).next('ul').toggle();
+      e.stopPropagation();
+      e.preventDefault();
+    });
+  });
+</script>
 
 </body>
 </html>
