--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
-
-
+<p><%= flash[:notice] %></p>
+<h1>Hello, Rails!</h1>
 <script>
   $(document).ready(function(){
     $('.dropdown a.test').on("click", function(e){
