--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>AdminWebapp</title>
-    <%= csrf_meta_tags %>
+<head>
+  <title>AdminWebapp</title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
-  <nav class="navbar navbar-default">
+<body>
+<nav class="navbar navbar-default">
+  <div class="navbar-inner">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -19,29 +20,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">
-          <img src="/image/logo_sq.jpg">
-        </a>
+        <div class="navbar-brand" href="/">
+          <img src="/app/assets/images/logo_sq.jpg">
+        </div>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><%= link_to "Home"%></li>
-          <li><%= link_to "Dashboard"%></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Login<span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Super Admin</a></li>
-              <li><a href="#">Admin</a></li>
-              <li><a href="#">Customer Support</a></li>
-              <li><a href="#">Marketing</a></li>
-              <li><a href="#">Accounting</a></li>
-              <li><a href="#">Driver</a></li>
-              <li><a href="#">Shift Supervisor</a></li>
-            </ul>
-          </li>
+          <li><%= link_to "Home", home_index_path %></li>
+          <li><%= link_to "Dashboard", role_admin_dashboards_path %></li>
+          <li><%= link_to "Login", my_accounts_path %></li>
         </ul>
+
         <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Search">
@@ -63,22 +54,22 @@
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
-  </nav>
+  </div>  <!-- .inner-container-->
+</nav>
 
 
-  <%=render 'partials/jumbotron'%>
-  <div class="container">
-    <%=render 'partials/login'%>
+<%= render 'partials/jumbotron' %>
+<div class="container">
+  <%= render 'partials/login' %>
 
-    <%= yield %>
-    <hr>
-    <footer>
+  <%= yield %>
+  <hr>
 
+  <%= render 'partials/footer' %>
 
-    </footer>
-
-  </div>
+</div>
 
 
-  </body>
+</body>
+
 </html>
