--- a/app/views/partials/_jumbotron.html.erb
+++ b/app/views/partials/_jumbotron.html.erb
@@ -1,5 +1,6 @@
-
+<% if params[:controller]== 'home'%>
 <div class="jumbotron text-center">
   <h1>Welcome to Jonnyfresh Admin Website</h1>
   <p class="uppercase">Your dry Cleaning and Lanundry!</p>
 </div>
+<%end%>
