--- a/app/views/partials/_login.html.erb
+++ b/app/views/partials/_login.html.erb
@@ -1,3 +1,5 @@
+
+<% if params[:controller]== 'my_account'%>
 <h2>Login form</h2>
 <form class="form-horizontal" role="form">
   <div class="form-group">
@@ -23,7 +25,7 @@
     <div class="col-sm-offset col-sm-8">
       <div class="text-right">
         <label input type="text">
-          <a href="#">Forgot Password?</a>
+          <a href="#"><%= link_to "Forgot Password?",password_resets_create_path%></a>
         </label>
       </div>
     </div>
@@ -31,7 +33,8 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-8">
-      <button type="submit" class="btn btn-default">Sign In</button>
+      <button type="submit" class="btn btn-default"><%= link_to "Sign In",my_accounts_update_path%></button>
     </div>
   </div>
 </form>
+<%end%>
