--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
           <span class="icon-bar"></span>
         </button>
         <div class="navbar-brand" href="/">
-          <img src="/app/assets/images/logo_sq.jpg">
+          <img class="img-responsive" src="/assets/logo_sq.jpg" alt="logo" width="50" height="200">
         </div>
       </div>
 
@@ -30,7 +30,7 @@
         <ul class="nav navbar-nav">
           <li><%= link_to "Home", home_index_path %></li>
           <li><%= link_to "Dashboard", role_admin_dashboards_path %></li>
-          <li><%= link_to "Login", my_accounts_path %></li>
+          <li><%= link_to "Login", new_session_path %></li>
         </ul>
 
         <form class="navbar-form navbar-left" role="search">
@@ -39,19 +39,7 @@
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Contact</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Link<span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Login</a></li>
-              <li><a href="#">Home</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
-        </ul>
+
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </div>  <!-- .inner-container-->
@@ -60,7 +48,7 @@
 
 <%= render 'partials/jumbotron' %>
 <div class="container">
-  <%= render 'partials/login' %>
+  <%#= render 'sessions/form' %>
 
   <%= yield %>
   <hr>
