--- a/app/views/partials/_login.html.erb
+++ b/app/views/partials/_login.html.erb
@@ -1,15 +1,15 @@
 
-<% if params[:controller]== 'my_account'%>
+<% if params[:controller]== 'sessions'%>
 <h2>Login form</h2>
 <form class="form-horizontal" role="form">
   <div class="form-group">
-    <label class="control-label col-sm-3" for="email">Email:</label>
+    <label class="control-label col-sm-3" for="login">Email:</label>
     <div class="col-sm-3">
       <input type="email" class="form-control" id="email" placeholder="Enter email">
     </div>
   </div>
   <div class="form-group">
-    <label class="control-label col-sm-3" for="pwd">Password:</label>
+    <label class="control-label col-sm-3" for="password">Password:</label>
     <div class="col-sm-3">
       <input type="password" class="form-control" id="pwd" placeholder="Enter password">
     </div>
@@ -25,7 +25,7 @@
     <div class="col-sm-offset col-sm-8">
       <div class="text-right">
         <label input type="text">
-          <a href="#"><%= link_to "Forgot Password?",password_resets_create_path%></a>
+          <a href="#"><%= link_to "Forgot Password?",password_resets_path%></a>
         </label>
       </div>
     </div>
@@ -33,7 +33,7 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-8">
-      <button type="submit" class="btn btn-default"><%= link_to "Sign In",my_accounts_update_path%></button>
+      <button type="submit" class="btn btn-default"><%= link_to "Sign In",sessions_path%></button>
     </div>
   </div>
 </form>
