--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,13 @@
 <p><%= flash[:notice] %></p>
 <h1>Hello, Rails!</h1>
+<%#= render 'layouts/nav' %>
+<!--<div class="navbar ">-->
+
+<!--<%#= render 'layouts/nav' %>-->
+
+
+
+<!--</div>-->
 <script>
   $(document).ready(function(){
     $('.dropdown a.test').on("click", function(e){
@@ -10,5 +18,4 @@
   });
 </script>
 
-</body>
-</html>
+
