--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,7 +1,6 @@
-<% if params[:controller]== 'home'%>
+<%# if params[:controller]== 'home' %>
+    <footer class="container-fluid text-center">
+      <p>footer copyright 2016</p>
 
-    <footer>
-  <p>footer</p>
-
-</footer>
-<%end%>
+    </footer>
+<%# end %>
