--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,52 +3,28 @@
 <head>
   <title>AdminWebapp</title>
   <%= csrf_meta_tags %>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= content_for?(:title) ? yield(:title) : "My Application" %></title>
+  <!--#<meta name="description" content="<%#= content_for?(:description) ? yield(:description) : "Learn Rails" %>">-->
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
 </head>
 
 <body>
-<nav class="navbar navbar-default">
-  <div class="navbar-inner">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <div class="navbar-brand" href="/">
-          <img class="img-responsive" src="/assets/logo_sq.jpg" alt="logo" width="50" height="200">
-        </div>
-      </div>
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><%= link_to "Home", home_index_path %></li>
-          <li><%= link_to "Dashboard", role_admin_dashboards_path %></li>
-          <li><%= link_to "Login", new_session_path %></li>
-        </ul>
+<% if content_for? :nav %>
+    <%= content_for :nav %>
+    <%= yield(:nav) %>
 
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+<% else %>
+    <%= render 'layouts/nav' %>
+<% end %>
 
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </div>  <!-- .inner-container-->
-</nav>
 
 
 <%= render 'partials/jumbotron' %>
 <div class="container">
-  <%#= render 'sessions/form' %>
 
   <%= yield %>
   <hr>
@@ -61,3 +37,4 @@
 </body>
 
 </html>
+
