--- a/app/views/role/super_admin_dashboards/index.html.erb
+++ b/app/views/role/super_admin_dashboards/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Role::SuperAdminDashboards#index</h1>
-<p>Find me in app/views/role/super_admin_dashboards/index.html.erb</p>
+<%= render 'partials/dashboard_nav'%>
+
+<%= render 'body_dashboard' %>
+
