--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,7 +11,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><%= link_to "Home", home_index_path %></li>
+          <li><%= link_to "Home", root_path %></li>
           <!--<li><%#= link_to "Dashboard", role_super_admin_dashboards_path %></li>-->
           <li><%= link_to "Login", new_session_path %></li>
 
