--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -13,7 +13,8 @@
         <ul class="nav navbar-nav">
           <li><%= link_to "Home", root_path %></li>
           <!--<li><%#= link_to "Dashboard", role_super_admin_dashboards_path %></li>-->
-          <li><%= link_to "Login", new_session_path %></li>
+          <li><%= link_to "Login", login_path %></li>
+          <li><%= link_to "Logout", logout_path %></li>
 
 
         </ul>
