dashboard update for ticket# JFADM-3

--- a/app/views/partials/_super_admin_sign_up_form.html.erb
+++ b/app/views/partials/_super_admin_sign_up_form.html.erb
@@ -1,6 +1,6 @@
 
 <% if params[:controller]== 'sessions'%>
-<h2>Login form</h2>
+<h2>Create User</h2>
 <form class="form-horizontal" role="form">
   <div class="form-group">
     <label class="control-label col-sm-3" for="login">Email:</label>
