--- a/app/views/partials/_dashboard_nav.html.erb
+++ b/app/views/partials/_dashboard_nav.html.erb
@@ -15,8 +15,8 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-left">
-        <li><%= link_to "Home", home_index_path %></li>
-        <li><%= link_to "Login as" %></li>
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "Login as", @_current_user %></li>
 
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -36,66 +36,6 @@
 
   <div class="row row-offcanvas row-offcanvas-left">
 
-    <!--<div class="col-sm-3 col-md-2 sidebar-offcanvas" id="sidebar" role="navigation">-->
-
-      <!--<ul class="nav nav-sidebar">-->
-        <!--<li class="active"><a href="#">Overview</a></li>-->
-        <!--<li><a href="http://bootstrapzero.com" target="_ext">Themes</a></li>-->
-        <!--<li><a href="http://bootstrap.theme.cards" target="_ext">Analytics</a></li>-->
-        <!--<li><a href="https://wrapbootstrap.com?ref=skelly" target="_ext">Export</a></li>-->
-      <!--</ul>-->
-      <!--<ul class="nav nav-sidebar">-->
-        <!--<li><a href="">Nav item</a></li>-->
-        <!--<li><a href="">Nav item again</a></li>-->
-        <!--<li><a href="">One more nav</a></li>-->
-        <!--<li><a href="">Another nav item</a></li>-->
-        <!--<li><a href="">More navigation</a></li>-->
-      <!--</ul>-->
-      <!--<ul class="nav nav-sidebar">-->
-        <!--<li><a href="">Nav item again</a></li>-->
-        <!--<li><a href="">One more nav</a></li>-->
-        <!--<li><a href="">Another nav item</a></li>-->
-      <!--</ul>-->
-
-    <!--</div>&lt;!&ndash;/span&ndash;&gt;-->
-
-
-
-    <!--<div class="col-sm-9 col-md-10 main">-->
-
-      <!--&lt;!&ndash;toggle sidebar button&ndash;&gt;-->
-      <!--<p class="visible-xs">-->
-        <!--<button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas"><i class="glyphicon glyphicon-chevron-left"></i></button>-->
-      <!--</p>-->
-
-      <!--<h1 class="page-header">-->
-        <!--Dashboard-->
-        <!--<p class="lead">(<a href="http://www.bootply.com/128936">with off-canvas sidebar</a>)</p>-->
-      <!--</h1>-->
-
-      <!--<div class="row placeholders">-->
-        <!--<div class="col-xs-6 col-sm-3 placeholder text-center">-->
-          <!--<img src="//placehold.it/200/6666ff/fff" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">-->
-          <!--<h4>Label</h4>-->
-          <!--<span class="text-muted">Something else</span>-->
-        <!--</div>-->
-        <!--<div class="col-xs-6 col-sm-3 placeholder text-center">-->
-          <!--<img src="//placehold.it/200/66ff66/fff" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">-->
-          <!--<h4>Label</h4>-->
-          <!--<span class="text-muted">Something else</span>-->
-        <!--</div>-->
-        <!--<div class="col-xs-6 col-sm-3 placeholder text-center">-->
-          <!--<img src="//placehold.it/200/6666ff/fff" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">-->
-          <!--<h4>Label</h4>-->
-          <!--<span class="text-muted">Something else</span>-->
-        <!--</div>-->
-        <!--<div class="col-xs-6 col-sm-3 placeholder text-center">-->
-          <!--<img src="//placehold.it/200/66ff66/fff" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">-->
-          <!--<h4>Label</h4>-->
-          <!--<span class="text-muted">Something else</span>-->
-        <!--</div>-->
-      <!--</div>-->
-      <!--</div>-->
 
     </div>
   </div>
