--- a/app/views/role/super_admin_dashboards/_body_dashboard.html.erb
+++ b/app/views/role/super_admin_dashboards/_body_dashboard.html.erb
@@ -1,94 +1,5 @@
 
 
-<!--<div class="row">-->
-<!--<div class="col-sm-3 col-md-6 col-lg-4 nav nav-sidebar" style="background-color:yellow;">-->
-<!--<ul class="nav nav-sidebar">-->
-<!--<li><a href="">Nav item</a></li>-->
-<!--<li><a href="">Nav item again</a></li>-->
-<!--<li><a href="">One more nav</a></li>-->
-<!--<li><a href="">Another nav item</a></li>-->
-<!--<li><a href="">More navigation</a></li>-->
-<!--</ul>-->
-<!--Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
-<!--Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.-->
-<!--</div>-->
-<!--<div class="col-sm-9 col-md-6 col-lg-8 nav nav-sidebar" style="background-color:pink;">-->
-<!--Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="container-fluid">-->
-
-<!--&lt;!&ndash;<div class="row row-offcanvas row-offcanvas-left">&ndash;&gt;-->
-<!--<div class="row">-->
-
-<!--<div class="col-sm-3 col-md-6 col-lg-4 sidebar-offcanvas" id="sidebar" role="navigation">-->
-<!--<nav class="navbar navbar-default navbar-fixed-side">-->
-<!--<ul class="nav nav-sidebar">-->
-<!--<li class="active"><a href="#">Overview</a></li>-->
-<!--<li><a href="http://bootstrapzero.com" target="_ext">Themes</a></li>-->
-<!--<li><a href="http://bootstrap.theme.cards" target="_ext">Analytics</a></li>-->
-<!--<li><a href="https://wrapbootstrap.com?ref=skelly" target="_ext">Export</a></li>-->
-<!--</ul>-->
-<!--<ul class="nav nav-sidebar">-->
-<!--<li><a href="">Nav item</a></li>-->
-<!--<li><a href="">Nav item again</a></li>-->
-<!--<li><a href="">One more nav</a></li>-->
-<!--<li><a href="">Another nav item</a></li>-->
-<!--<li><a href="">More navigation</a></li>-->
-<!--</ul>-->
-<!--<ul class="nav nav-sidebar">-->
-<!--<li><a href="">Nav item again</a></li>-->
-<!--<li><a href="">One more nav</a></li>-->
-<!--<li><a href="">Another nav item</a></li>-->
-<!--</ul>-->
-<!--</nav>-->
-<!--</div>&lt;!&ndash;/span&ndash;&gt;-->
-
-
-
-<!--<div class="col-sm-9 col-md-10 col-lg-10 main">-->
-
-<!--&lt;!&ndash;toggle sidebar button&ndash;&gt;-->
-<!--<p class="visible-xs">-->
-<!--<button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">-->
-<!--<i class="glyphicon glyphicon-chevron-left"></i></button>-->
-<!--</p>-->
-
-<!--<h1 class="page-header">-->
-<!--Dashboard-->
-<!--<p class="lead">(<a href="http://www.bootply.com/128936">with off-canvas sidebar</a>)</p>-->
-<!--</h1>-->
-
-<!--<div class="row placeholders">-->
-<!--<div class="col-xs-6 col-sm-3 placeholder text-center">-->
-<!--<img src="//placehold.it/200/6666ff/fff" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">-->
-<!--<h4>Label</h4>-->
-<!--<span class="text-muted">Something else</span>-->
-<!--</div>-->
-<!--<div class="col-xs-6 col-sm-3 placeholder text-center">-->
-<!--<img src="//placehold.it/200/66ff66/fff" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">-->
-<!--<h4>Label</h4>-->
-<!--<span class="text-muted">Something else</span>-->
-<!--</div>-->
-<!--<div class="col-xs-6 col-sm-3 placeholder text-center">-->
-<!--<img src="//placehold.it/200/6666ff/fff" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">-->
-<!--<h4>Label</h4>-->
-<!--<span class="text-muted">Something else</span>-->
-<!--</div>-->
-<!--<div class="col-xs-6 col-sm-3 placeholder text-center">-->
-<!--<img src="//placehold.it/200/66ff66/fff" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">-->
-<!--<h4>Label</h4>-->
-<!--<span class="text-muted">Something else</span>-->
-<!--</div>-->
-<!--</div>-->
-<!--&lt;!&ndash;</div>&ndash;&gt;-->
-
-<!--</div>-->
-<!--</div>-->
-
-<!--</div>-->
-
 <div class="wrapper">
   <!--<div class="clearfix hidden-lg hidden-md "></div>-->
 
@@ -99,8 +10,8 @@
 
       <div class="well">
         <ul class="nav nav-sidebar">
-          <li><a href="">Nav item</a></li>
-          <li><a href="">Nav item again</a></li>
+          <li><a href="">Create User Account</a></li>
+          <li><a href="">Manage User account</a></li>
           <!--<li><a href="">One more nav</a></li>-->
           <!--<li><a href="">Another nav item</a></li>-->
           <!--<li><a href="">More navigation</a></li>-->
