--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,9 +1,13 @@
-<h1>Reset Password</h1>
+<% provide(:title, "Reset password") %>
+<h1>Forgot password</h1>
 
-<%= form_tag password_resets_path, :method => :post do %>
-    <div class="field">
-      <%= label_tag :login %>
-      <%= text_field_tag :login, params[:login] %>
-    </div>
-    <div class="actions"><%= submit_tag "Reset Password" %></div>
-<% end %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(:password_reset, url: password_resets_path) do |f| %>
+        <%= f.label :Email %>
+        <%= f.email_field :login, class: 'form-control' %>
+
+        <%= f.submit "Reset Password", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
