--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,15 +11,34 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><%= link_to "Home", root_path %></li>
-          <!--<li><%#= link_to "Dashboard", role_super_admin_dashboards_path %></li>-->
+          <% if current_user %>
 
-          <li><%= link_to "Login", login_path %></li>
-          <li><%= link_to "Logout", logout_path %></li>
+        <li><%= link_to "Home", root_path %></li>
+          <!--&lt;!&ndash;<li><%#= link_to "Dashboard", role_super_admin_dashboards_path %></li>&ndash;&gt;-->
+
+          <!--<li><%#= link_to "Login", login_path %></li>-->
+          <!--<li><%#= link_to "Logout", logout_path %></li>-->
 
 
-        </ul>
+        <!--</ul>-->
 
+
+        <!--<div class="nav pull-right">-->
+              <ul>
+                <%= current_user.user %>
+                <%= link_to "Home", root_path %><
+
+                <%= link_to "Log out", logout_path, method: "delete" %>
+              </ul>
+          <% else %>
+              <ul>
+                <li><%= link_to "Home", root_path %></li>
+                <li><%= link_to "Login", '/login' %></a></li>
+                <li><%=link_to "Signup", '/signup' %></a></li>
+              </ul>
+          <% end %>
+        <!--</div>-->
+      </ul>
         <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Search">
