--- a/app/views/partials/_dashboard_nav.html.erb
+++ b/app/views/partials/_dashboard_nav.html.erb
@@ -15,15 +15,11 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-left">
-        <%# current_user.nil if? %>
+         <%= link_to "Home", root_path %>
+        <%#= 'Login as:' current_user%>
+        <%= link_to "Logout", root_path %>
 
-      <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Login as", current_user.login %></li>
-        <%= link_to "Logout", :logout, method: :post %>
-        <%# else %>
-            <%= link_to "Register", my_accounts_path %> |
-            <%= link_to "Login", :login %>
-        <%# end %>
+
             </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Dashboard</a></li>
