--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for @user, :url => password_reset_path(params[:id]) do |f| %>
+<%= form_for :password_reset, :url => password_reset_path(params[:id]) do |f| %>
     <% if @user.errors.any? %>
         <div class="error_messages">
           <h2>Form is invalid</h2>
