--- a/app/views/role/super_admin_dashboards/index.html.erb
+++ b/app/views/role/super_admin_dashboards/index.html.erb
@@ -1,5 +1,5 @@
 <%= render 'partials/dashboard_nav'%>
-<%if @_current_user %>
+<%#if @_current_user %>
 
-<%end%>
+<%#end%>
 <%= render 'body_dashboard' %>
