--- a/app/views/role/super_admin_dashboards/_body_dashboard.html.erb
+++ b/app/views/role/super_admin_dashboards/_body_dashboard.html.erb
@@ -10,7 +10,7 @@
 
       <div class="well">
         <ul class="nav nav-sidebar">
-          <li><a href="">Create User Account</a></li>
+          <li><%=link_to "Create User Account" , render(:partial=> 'partials/super_admin_sign_up_form') %></li>
           <li><a href="">Manage User account</a></li>
           <!--<li><a href="">One more nav</a></li>-->
           <!--<li><a href="">Another nav item</a></li>-->
