--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,42 +1,46 @@
-<% if params[:controller]!= 'super_admin_dashboards'%>
 <nav class="navbar navbar-default">
-  <!--<div class="navbar-inner">-->
-    <div class="container-fluid">
-      <!--&lt;!&ndash; Brand and toggle get grouped for better mobile display &ndash;&gt;-->
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <!--<a class="navbar-brand" href="#">Super Admin Dashboard</a>-->
       <div class="navbar-header">
 
-          <img class="img-responsive" src="/assets/logo_sq.jpg" alt="logo" width="50" height="200">
+        <img class="img-responsive" src="/assets/logo_sq.jpg" alt="logo" width="50" height="200">
       </div>
+    </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <% if current_user %>
+    <div id="navbar" class="navbar-collapse collapse">
 
-        <li><%= link_to "Home", root_path %></li>
-          <!--&lt;!&ndash;<li><%#= link_to "Dashboard", role_super_admin_dashboards_path %></li>&ndash;&gt;-->
-
-          <!--<li><%#= link_to "Login", login_path %></li>-->
-          <!--<li><%#= link_to "Logout", logout_path %></li>-->
-
-
-        <!--</ul>-->
-
-
-        <!--<div class="nav pull-right">-->
-              <ul>
+    <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">-->
+      <ul class="nav navbar-nav">
+        <div class="container-fluid">
+        <% if current_user %>
+              <ul class="nav navbar-nav">
                 <%= current_user.user %>
-                <%= link_to "Home", root_path %><
+                <li><%= link_to "Home", root_path %></li>
 
-                <%= link_to "Log out", logout_path, method: "delete" %>
+                <li><%= link_to "Log out", logout_path, method: "delete" %></li>
               </ul>
           <% else %>
-              <ul>
+              <ul class="nav navbar-nav">
                 <li><%= link_to "Home", root_path %></li>
-                <li><%= link_to "Login", '/login' %></a></li>
-                <li><%=link_to "Signup", '/signup' %></a></li>
+                <li><%= link_to "Login", '/login' %></li>
+                <!--<li><%#=link_to "Signup", role_super_admin_dashboards_path %></li>-->
               </ul>
           <% end %>
+          <div>
+
+            <%= render 'partials/user_sign_up'%>
+
+          </div>
+        </div>
+
         <!--</div>-->
       </ul>
         <form class="navbar-form navbar-left" role="search">
@@ -49,6 +53,8 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </div>  <!-- .inner-container-->
+      </div>
 
 </nav>
-<%end%>
+
+
