--- a/app/views/role/super_admin_dashboards/_body_dashboard.html.erb
+++ b/app/views/role/super_admin_dashboards/_body_dashboard.html.erb
@@ -6,35 +6,49 @@
   <div class="row">
     <!--<div class="span2">-->
     <!--sidebar-->
-    <div class="col-xs-4 left">
+    <div class="clearfix hidden-lg hidden-md "></div>
 
-      <div class="well">
-        <ul class="nav nav-sidebar">
-          <li><%=link_to "Create User Account" , render(:partial=> 'partials/super_admin_sign_up_form') %></li>
-          <li><a href="">Manage User account</a></li>
-          <!--<li><a href="">One more nav</a></li>-->
-          <!--<li><a href="">Another nav item</a></li>-->
-          <!--<li><a href="">More navigation</a></li>-->
+    <div class="col-xs-6 col-lg-2 col-sm-6 col-md-2">
+
+      <div class="well well-xs">
+        <ul class="nav nav-pills nav-stacked">
+
+          <li><%=link_to "User Registration" %></li>
+          <li><a href="">Customer management</a></li>
+          <li><a href="">Support</a></li>
+          <li><a href="">Order management</a></li>
+          <li><a href="">Invoice</a></li>
+          <li><a href="">Plants management</a></li>
+          <li><a href="">Drivers management</a></li>
+          <li><a href="">Countries management</a></li>
+
+
         </ul>
+
 
 
         <!--</div> &lt;!&ndash;   end of sidebar&ndash;&gt;-->
       </div>
     </div>
 
+    <!--body with div-->
+
+
     <div class="clearfix hidden-lg hidden-md "></div>
 
-    <div class="col-xs-6 ">
+    <div class="col-xs-4 col-lg-6 col-sm-6 col-md-5">
 
       <div class="well"> Activites with different boxes eg: show notification for emails, opentickets etc  </div>
 
     </div>
-    <div class="col-xs-2 ">
+    <div class="clearfix hidden-lg hidden-md "></div>
 
-      <div class="well"> Activites with different boxes eg: show notification for emails, opentickets etc  </div>
+    <div class="col-xs-4 col-lg-4 col-sm-4 col-md-5">
+
+      <div class="well well-xs"> Activites with different boxes eg: show notification for emails, opentickets etc  </div>
 
     </div>
-    <div class="clearfix hidden-lg hidden-md "></div>
+    <!--<div class="clearfix hidden-lg hidden-md "></div>-->
 
   </div>
 
