--- a/app/views/role/super_admin_dashboards/index.html.erb
+++ b/app/views/role/super_admin_dashboards/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'partials/dashboard_nav'%>
+<%#= render 'partials/dashboard_nav'%>
 <%#= render 'partials/user_sign_up'%>
 <%#if @_current_user %>
 
