--- a/app/assets/stylesheets/role/super_admin_dashboards.css.scss
+++ b/app/assets/stylesheets/role/super_admin_dashboards.css.scss
@@ -1,89 +1,89 @@
-/*
- * Style tweaks
- * --------------------------------------------------
- */
-body {
-  position: relative;
-  padding-top: 60px;
-  padding-bottom: 6rem;
-  margin:0;
-  background-color: #f5f5f5;
-}
-footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding-left: 15px;
-  padding-right: 15px;
-  background-color: peachpuff;
-  text-align: center;
-}
-
-/*
- * Off Canvas
- * --------------------------------------------------
- */
-@media screen and (max-width: 768px) {
-  .row-offcanvas {
-    position: relative;
-    -webkit-transition: all 0.25s ease-out;
-    -moz-transition: all 0.25s ease-out;
-    transition: all 0.25s ease-out;
-  }
-
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-    left: -33%;
-  }
-
-  .row-offcanvas-left.active {
-    left: 33%;
-  }
-
-  .sidebar-offcanvas {
-    position: absolute;
-    top: 0;
-    width: 33%;
-    margin-left: 10px;
-  }
-}
-
-
-/* Sidebar navigation */
-.nav-sidebar {
-  background-color: #f5f5f5;
-  margin-right: -15px;
-  margin-bottom: 20px;
-  margin-left: -15px;
-}
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-}
-.nav-sidebar > .active > a {
-  color: #fff;
-  background-color: #428bca;
-}
-
-/*
- * Main content
- */
-
-.main {
-  padding: 20px;
-  background-color: #fff;
-}
-@media (min-width: 768px) {
-  .main {
-    padding-right: 40px;
-    padding-left: 40px;
-  }
-}
-.main .page-header {
-  margin-top: 0;
-}
-
-
-
-
+///*
+// * Style tweaks
+// * --------------------------------------------------
+// */
+//body {
+//  position: relative;
+//  padding-top: 60px;
+//  padding-bottom: 6rem;
+//  margin:0;
+//  background-color: #f5f5f5;
+//}
+//footer {
+//  position: absolute;
+//  right: 0;
+//  bottom: 0;
+//  left: 0;
+//  padding-left: 15px;
+//  padding-right: 15px;
+//  background-color: peachpuff;
+//  text-align: center;
+//}
+//
+///*
+// * Off Canvas
+// * --------------------------------------------------
+// */
+//@media screen and (max-width: 768px) {
+//  .row-offcanvas {
+//    position: relative;
+//    -webkit-transition: all 0.25s ease-out;
+//    -moz-transition: all 0.25s ease-out;
+//    transition: all 0.25s ease-out;
+//  }
+//
+//  .row-offcanvas-left
+//  .sidebar-offcanvas {
+//    left: -33%;
+//  }
+//
+//  .row-offcanvas-left.active {
+//    left: 33%;
+//  }
+//
+//  .sidebar-offcanvas {
+//    position: absolute;
+//    top: 0;
+//    width: 33%;
+//    margin-left: 10px;
+//  }
+//}
+//
+//
+///* Sidebar navigation */
+//.nav-sidebar {
+//  background-color: #f5f5f5;
+//  margin-right: -15px;
+//  margin-bottom: 20px;
+//  margin-left: -15px;
+//}
+//.nav-sidebar > li > a {
+//  padding-right: 20px;
+//  padding-left: 20px;
+//}
+//.nav-sidebar > .active > a {
+//  color: #fff;
+//  background-color: #428bca;
+//}
+//
+///*
+// * Main content
+// */
+//
+//.main {
+//  padding: 20px;
+//  background-color: #fff;
+//}
+//@media (min-width: 768px) {
+//  .main {
+//    padding-right: 40px;
+//    padding-left: 40px;
+//  }
+//}
+//.main .page-header {
+//  margin-top: 0;
+//}
+//
+//
+//
+//
