--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,39 +18,38 @@
     <div id="navbar" class="navbar-collapse collapse">
 
       <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">-->
-      <ul class="nav navbar-nav">
-        <div class="container-fluid">
-          <% if current_user %>
-              <ul class="nav navbar-nav">
-                <%= current_user.user %>
-                <li><%= link_to "Home", root_path %></li>
+      <ul class="nav navbar-nav ">
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "Help", '#' %></li>
 
-                <li><%= link_to "Log out", logout_path, method: "delete" %></li>
-              </ul>
-          <% else %>
-              <ul class="nav navbar-nav">
-                <li><%= link_to "Home", root_path %></li>
-                <li><%= link_to "Login", '/login' %></li>
-                <!--<li><%#=link_to "Signup", role_super_admin_dashboards_path %></li>-->
-              </ul>
-          <% end %>
-          <div>
 
-            <%#= render 'partials/user_sign_up' %>
+        <% if signed_in %>
+            <ul class="nav navbar-nav">
+              <%#= current_user.login %>
+              <li><%= link_to "Profile" %></li>
+              <li><%= link_to "Settings", '#' %></li>
+              <li><%= link_to "Log out", '/logout', method:"delete" %></li>
+            </ul>
+        <% else %>
+            <li><%= link_to "Login", '/login' %></li>
+            <!--<li><%#=link_to "Signup", role_super_admin_dashboards_path %></li>-->
 
-          </div>
+
+        <% end %>
+        </ul>
         </div>
 
-        <!--</div>-->
-      </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
 
-    </div><!-- /.navbar-collapse -->
+    <!--</div>-->
+    </ul>
+    <form class="navbar-form navbar-right" role="search">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search">
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+
+  </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
   </div>  <!-- .inner-container-->
   </div>
