--- a/app/views/partials/_super_admin_sign_up_form.html.erb
+++ b/app/views/partials/_super_admin_sign_up_form.html.erb
@@ -1,5 +1,5 @@
 
-<% if params[:controller]== 'sessions'%>
+<%# if params[:controller]== 'sessions'%>
 <h2>Create User</h2>
 <form class="form-horizontal" role="form">
   <div class="form-group">
@@ -37,4 +37,4 @@
     </div>
   </div>
 </form>
-<%end%>
+<%#end%>
