--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,24 +1,23 @@
 <% provide(:title, "Reset Password") %>
 
 <h1>Enter Your User Information </h1>
- <%= form_tag edit_password_reset_path do |f| %>
-    <%# if @user.errors.any? %>
-        <!--<div class="error_messages">-->
-          <!--<h2>Form is invalid</h2>-->
-          <!--<ul>-->
-            <!--<%# for message in @user.errors.full_messages %>-->
-                <!--<li><%#= message %></li>-->
-            <!--<%# end %>-->
-          <!--</ul>-->
-        <!--</div>-->
-    <%# end %>
-    <div class="field">
-      <%= f.label :password %>
-      <%= f.password_field :password %>
-    </div>
-    <div class="field">
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation %>
-    </div>
-    <div class="actions"><%= f.submit "Update Password" %></div>
+<%= form_tag send_password_reset_path do %>
+
+    <fieldset>
+      <div>
+        <%= label_tag :password %>
+        <%= text_field_tag :password, params[:password], :placeholder => "Password" %>
+      </div>
+      <div>
+        <%= label_tag :password_confirmation %>
+        <%= text_field_tag :password_confirmation, params[:password_confirmation], :placeholder => "Enter same password again" %>
+      </div>
+
+      <div class="actions">
+        <%= submit_tag :submit, class: "btn btn-primary" %>
+      </div>
+    </fieldset>
+
 <% end %>
+
+
