--- a/app/views/role/super_admin_dashboards/_body_dashboard.html.erb
+++ b/app/views/role/super_admin_dashboards/_body_dashboard.html.erb
@@ -16,7 +16,7 @@
 
 
         <li><%=link_to "User Registration", role_signup_new_path %></li>
-          <li><a href="">Customer management</a></li>
+        <li><%=link_to "Customer Management", role_customers_path %></li>
           <li><a href="">Support</a></li>
           <li><a href="">Order management</a></li>
           <li><a href="">Invoice</a></li>
