--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,17 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+//
+//p.uppercase {
+//  text-transform: uppercase;
+//}
+//div.footer {
+//  position: absolute;
+//  right: 0;
+//  bottom: 0;
+//  left: 0;
+//  padding-left: 15px;
+//  padding-right: 15px;
+//  background-color: peachpuff;
+//  text-align: center;
+//}
 
-p.uppercase {
-  text-transform: uppercase;
-}
-div.footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding-left: 15px;
-  padding-right: 15px;
-  background-color: peachpuff;
-  text-align: center;
-}
