fixes for customer management for ticket JFADM-4

--- a/app/views/partials/_customer_support.html.erb
+++ b/app/views/partials/_customer_support.html.erb
@@ -1,21 +1,37 @@
 
-  <h2>Table</h2>
-  <p>The .table-responsive class creates a responsive table which will scroll horizontally on small devices (under 768px). When viewing on anything larger than 768px wide, there is no difference:</p>
+<!--table responsive and  scrolls horizontally-->
+
   <div class="table-responsive">
-    <table class="table">
+  <div class="container">
+    <h2>Table</h2>
+    <p>The .table-hover class enables a hover state on table rows within a tbody:</p>
+    <table class="table table-hover">
       <thead>
       <tr>
         <th>#</th>
-        <th>Customer Name</th>
-        <th>Localized Category</th>
-        <th> Products</th>
-        <th>City</th>
-        <th>Country</th>
+        <th>Email</th>
+        <th>Ordered Item</th>
+        <th>Product Infor</th>
+        <th>Address</th>
+        <th>city</th>
+        <th>country</th>
+        <th></th>
       </tr>
       </thead>
       <tbody>
-
-
+      <tr>
+        <td>1</td>
+        <td>Anna</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Debbie</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>John</td>
+      </tr>
       </tbody>
     </table>
+  </div>
   </div>
