--- a/app/views/role/customers/_customer_side_nav.html.erb
+++ b/app/views/role/customers/_customer_side_nav.html.erb
@@ -7,7 +7,7 @@
   <div class="col-xs-6 col-lg-2 col-sm-6 col-md-2">
 
     <div class="well well-xs">
-      <ul class="nav nav-pills nav-stacked">
+      <ul class="nav nav-pills nav-stacked nav-responsive" >
         <% if signed_in %>
 
 
@@ -25,6 +25,10 @@
             <!--</div> &lt;!&ndash;   end of sidebar&ndash;&gt;-->
             </div>
             </div>
+            <%= render 'partials/customer_support' %>
+
             </div>
+
             </div>
+
         <%end%>
