fixes for dashboards

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
+<% if params[:controller]== 'home'%>
 
-<!-- Container (About Section) -->
+    <!-- Container (About Section) -->
 <div id="about" class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
@@ -229,5 +230,5 @@
   </div>
 </div>
 
-
+<% end %>
 
