--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,6 @@
-<nav class="navbar navbar-default">
+<%# if params[:controller]== 'home'%>
+
+    <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -21,20 +23,12 @@
       <ul class="nav navbar-nav ">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", '#' %></li>
-
-
-
-
-
-
-
         <% if signed_in %>
             <ul class="nav navbar-nav">
               <li><%= link_to "Profile" %></li>
               <li><%= link_to "Settings", '#' %></li>
               <li><%=link_to " Dashboards", role_super_admin_dashboards_path %></li>
               <li><%=link_to " Register user", role_signup_new_path %></li>
-
               <li><%= link_to "Log out", '/logout', method:"delete" %></li>
             </ul>
         <% else %>
@@ -45,18 +39,12 @@
             <li><a href="#contact">CONTACT</a></li>
             <li><%= link_to "Login", '/login' %></li>
 
-
         <% end %>
         </ul>
         </div>
 
     </ul>
-    <!--<form class="navbar-form navbar-right" role="search">-->
-      <!--<div class="form-group">-->
-        <!--<input type="text" class="form-control" placeholder="Search">-->
-      <!--</div>-->
-      <!--<button type="submit" class="btn btn-default">Submit</button>-->
-    <!--</form>-->
+
 
   </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -65,4 +53,5 @@
 
 </nav>
 
+<%# end %>
 
