controllers and view  added

--- a/app/views/role/customers/index.html.erb
+++ b/app/views/role/customers/index.html.erb
@@ -8,4 +8,8 @@
 </div>
             <br>
 
+<div class="site-wrap">
+  <!-- insert the rest of your page markup here -->
+</div>
+
         <%= link_to "Create New Category", new_role_customer_path %>
