--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,7 +44,7 @@ h4 {
   font-family: Montserrat, sans-serif;
 }
 .container-fluid {
-  padding: 60px 50px;
+  padding: 40px 50px;
 }
 .bg-grey {
   background-color: #f6f6f6;
@@ -69,13 +69,13 @@ h4 {
 }
 .carousel-control.right, .carousel-control.left {
   background-image: none;
-  color: #f4511e;
+  color: #dd21b9;
 }
 .carousel-indicators li {
-  border-color: #f4511e;
+  border-color:#dd21b9;
 }
 .carousel-indicators li.active {
-  background-color: #f4511e;
+  background-color: #dd21b9;
 }
 .item h4 {
   font-size: 19px;
@@ -88,7 +88,7 @@ h4 {
   font-style: normal;
 }
 .panel {
-  border: 1px solid #f4511e;
+  border: 1px solid #a9dd21;
   border-radius:0 !important;
   transition: box-shadow 0.5s;
 }
@@ -98,11 +98,11 @@ h4 {
 .panel-footer .btn:hover {
   border: 1px solid #f4511e;
   background-color: #fff !important;
-  color: #f4511e;
+  color: #21b9dd;
 }
 .panel-heading {
   color: #fff !important;
-  background-color: #f4511e !important;
+  background-color: #21b9dd !important;
   padding: 25px;
   border-bottom: 1px solid transparent;
   border-top-left-radius: 0px;
@@ -122,7 +122,7 @@ h4 {
 }
 .panel-footer .btn {
   margin: 15px 0;
-  background-color: #f4511e;
+  background-color: #85c593;
   color: #fff;
 }
 .navbar {
@@ -140,17 +140,65 @@ h4 {
   color: #fff !important;
 }
 .navbar-nav li a:hover, .navbar-nav li.active a {
-  color: #f4511e !important;
+  color: #E599FF !important;
   background-color: #fff !important;
 }
 .navbar-default .navbar-toggle {
   border-color: transparent;
   color: #fff !important;
 }
+
+.sidenav {
+  display: block;
+  height: 100%;
+  width: 250px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #ff0066;
+  overflow-x: hidden;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s
+}
+
+.sidenav a:hover, .offcanvas a:focus{
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+  transition: margin-left .5s;
+  padding: 20px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+/// side nav
 footer .glyphicon {
   font-size: 20px;
   margin-bottom: 20px;
-  color: #f4511e;
+  color: #E599FF;
 }
 .slideanim {visibility:hidden;}
 .slide {
@@ -195,5 +243,6 @@ footer .glyphicon {
     font-size: 150px;
   }
 }
+
 
 
