--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -78,23 +78,23 @@
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="paris.jpg" alt="Paris" width="400" height="300">
-        <p><strong>Paris</strong></p>
-        <p>Yes, we built Paris</p>
+        <img src="paris.jpg" alt="Berlin" width="400" height="300">
+        <p><strong>Berlin</strong></p>
+        <p>Yes, we .....</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="newyork.jpg" alt="New York" width="400" height="300">
-        <p><strong>New York</strong></p>
-        <p>We built New York</p>
+        <img src="newyork.jpg" alt="München" width="400" height="300">
+        <p><strong>München</strong></p>
+        <p>We clean ......</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-        <p><strong>San Francisco</strong></p>
-        <p>Yes, San Fran is ours</p>
+        <img src="sanfran.jpg" alt="Austria" width="400" height="300">
+        <p><strong>Austria</strong></p>
+        <p>Yes, Austira.....</p>
       </div>
     </div>
   </div><br>
@@ -133,11 +133,11 @@
   </div>
 </div>
 
-<!-- Container (Pricing Section) -->
+ Container (Pricing Section)
 <div id="pricing" class="container-fluid">
   <div class="text-center">
-    <h2>Pricing</h2>
-    <h4>Choose a payment plan that works for you</h4>
+    <h2>Bundled product pricing</h2>
+    <h4>test panel</h4>
   </div>
   <div class="row slideanim">
     <div class="col-sm-4 col-xs-12">
@@ -155,7 +155,7 @@
         <div class="panel-footer">
           <h3>$19</h3>
           <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
+          <button class="btn btn-lg">add to the cart</button>
         </div>
       </div>
     </div>
@@ -174,7 +174,7 @@
         <div class="panel-footer">
           <h3>$29</h3>
           <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
+          <button class="btn btn-lg">add to the cart</button>
         </div>
       </div>
     </div>
@@ -193,7 +193,7 @@
         <div class="panel-footer">
           <h3>$49</h3>
           <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
+          <button class="btn btn-lg">add to the cart</button>
         </div>
       </div>
     </div>
