--- a/app/views/role/customers/_customer_side_nav.html.erb
+++ b/app/views/role/customers/_customer_side_nav.html.erb
@@ -25,3 +25,23 @@
       </div>
 
 
+<ul class="navigation">
+  <li class="nav-item"><a href="#">Home</a></li>
+  <li class="nav-item"><a href="#">Portfolio</a></li>
+  <li class="nav-item"><a href="#">About</a></li>
+  <li class="nav-item"><a href="#">Blog</a></li>
+  <li class="nav-item"><a href="#">Contact</a></li>
+</ul>
+
+<input type="checkbox" id="nav-trigger" class="nav-trigger" />
+<label for="nav-trigger"></label>
+
+<div class="site-wrap">
+  <!-- insert the rest of your page markup here -->
+</div>
+
+
+
+<input type="checkbox" id="nav-trigger" class="nav-trigger" />
+<label for="nav-trigger"></label>
+
