--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -151,7 +151,7 @@ h4 {
 .sidenav {
   display: block;
   height: 100%;
-  width: 250px;
+  width: 0;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -179,7 +179,7 @@ h4 {
   top: 0;
   right: 25px;
   font-size: 36px;
-  margin-left: 50px;
+  margin-left: 0  ;
 }
 
 
