--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,18 +1,26 @@
 <h1>Orders#index</h1>
 <p>Find me in app/views/orders/index.html.erb</p>
-<div>
+<div class="row">
+  <!--<div class="span2">-->
+  <!--sidebar-->
+  <div class="clearfix hidden-lg hidden-md "></div>
   <div class="col-xs-6 col-lg-2 col-sm-6 col-md-2">
+    <ul id="mySidenav" class="sidenav">
 
-    <div class="well well-xs">
-      <ul class="nav nav-pills nav-stacked nav-responsive">
-  <li><%= link_to "List of Orders" %></li>
-  <li><a href=""> Edit Orders</a></li>
-  <li><a href="">Edit Product</a></li>
-      </ul>
+      <% if signed_in %>
+
+          <li><%= link_to "List of Orders" %></li>
+          <li><a href=""> Edit Orders</a></li>
+          <li><a href="">Edit Product</a></li>
+          </ul>
 
 
-      <!--</div> &lt;!&ndash;   end of sidebar&ndash;&gt;-->
-    </div>
-  </div>
+          <!--</div> &lt;!&ndash;   end of sidebar&ndash;&gt;-->
+          </div>
+
+      <% end %>
+      <%= render 'list_order' %>
+
+      </div>
 </div>
-        </div>
+</div>
