--- a/app/views/role/customers/_customer_side_nav.html.erb
+++ b/app/views/role/customers/_customer_side_nav.html.erb
@@ -4,9 +4,9 @@
 <div class="clearfix hidden-lg hidden-md "></div>
 
 <div class="col-xs-6 col-lg-2 col-sm-6 col-md-2">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
-  <div class="well well-xs">
-    <ul class="nav nav-pills nav-stacked nav-responsive">
+  <ul id="mySidenav" class="sidenav">
       <% if signed_in %>
           <li><%= link_to "View Customer's Product Information", role_customers_path %></li>
           <li><a href=""> Edit Customer</a></li>
