--- a/app/views/role/customers/index.html.erb
+++ b/app/views/role/customers/index.html.erb
@@ -2,7 +2,8 @@
 
 
 <div>
-
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+</div>
         <%= render 'customer_side_nav' %>
 
 </div>
