--- a/app/views/role/super_admin_dashboards/_body_dashboard.html.erb
+++ b/app/views/role/super_admin_dashboards/_body_dashboard.html.erb
@@ -8,12 +8,12 @@
 
     <div class="col-xs-6 col-lg-2 col-sm-6 col-md-2">
 
-      <div class="well well-xs">
         <ul id="mySidenav" class="sidenav">
           <!--<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>-->
           <% if signed_in %>
               <li><%= link_to "User Registration", role_signup_new_path %></li>
               <li><%= link_to "Customer Management", role_customers_path %></li>
+              <li><%= link_to " Invoices", invoices_path %></li>
               <li><a href="">Support</a></li>
               <li><%= link_to "Order Management", orders_path %></li>
               <li><a href="">Invoice</a></li>
