--- a/app/views/role/customers/edit.html.erb
+++ b/app/views/role/customers/edit.html.erb
@@ -1,2 +1,35 @@
-<h1>Role::Customers#edit</h1>
-<p>Find me in app/views/role/customers/edit.html.erb</p>
+
+<% provide(:title, 'Customer profile') %>
+<h1>Update customer info</h1>
+
+<%= form_tag role_customer_path do %>
+
+    <fieldset>
+      <div>
+        <div><%=  label_tag :first_name %><br />
+          <%= email_field_tag :first, params[:first_name], :placeholder => "First name" %></div>
+
+        <div><%=  label_tag :last_name %><br />
+          <%= email_field_tag :last_name, params[:last_name], :placeholder => "Last name" %></div>
+
+        <div><%= label_tag :date_of_birth %><br />
+          <%= password_field_tag :date_of_birth, params[:date_of_birth], :placeholder => "Date of Birth" %></div>
+
+        <div><%= label_tag :country_of_residence %><br />
+          <%= password_field_tag :country_of_residence,params[:country_of_residence], :placeholder => "country of residence" %></div>
+
+        <div><%= label_tag :role %><br />
+          <%= select_tag :role, options_for_select(['Super admin','Admin','Customer Support', 'Marketing','Shift Supervisor', 'Driver','Others', 'Select Roles'],'Select Roles') %>
+
+        </div>
+      </div>
+
+      <div>
+        <%= submit_tag "Save changes" ,class: "btn btn-primary"%>
+      </div>
+    </fieldset>
+
+<% end %>
+
+
+
