--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,7 +22,14 @@ body {
   font: 400 15px Lato, sans-serif;
   line-height: 1.8;
   color: #818181;
+   transition: background-color .5s;
+
 }
+
+//body {
+//  font-family: "Lato", sans-serif;
+//  transition: background-color .5s;
+//}
 h2 {
   font-size: 24px;
   text-transform: uppercase;
@@ -150,10 +157,10 @@ h4 {
 
 .sidenav {
   display: block;
-  height: 100%;
+  height: 900%;
   width: 0;
   position: fixed;
-  z-index: 1;
+  z-index: 9999;
   top: 0;
   left: 0;
   background-color: #ff0066;
@@ -164,7 +171,7 @@ h4 {
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 20px;
   color: #818181;
   display: block;
   transition: 0.3s
@@ -182,18 +189,24 @@ h4 {
   margin-left: 0  ;
 }
 
+.sidenav-toggle-btn{
+  display: block;
+  position: absolute;
+  left: 200px;
 
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-  transition: margin-left .5s;
-  padding: 20px;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
+///* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+//#main {
+//  transition: margin-left .5s;
+//  padding: 20px;
+//}
+//
+///* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+//@media screen and (max-height: 450px) {
+//  .sidenav {padding-top: 15px;}
+//  .sidenav a {font-size: 18px;}
+//}
 /// side nav
 footer .glyphicon {
   font-size: 20px;
