--- a/app/views/role/customers/index.html.erb
+++ b/app/views/role/customers/index.html.erb
@@ -1,16 +1,14 @@
-<h1>Customer Management</h1>
+<!--<div class="clearfix hidden-lg hidden-md "></div>-->
+<a class="sidenav-toggle-btn">
+  <span  style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+</a>
+
+<h1 id="default-view">Customer Management</h1>
 
 
-<div>
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
-</div>
-        <%= render 'customer_side_nav' %>
+<%= render 'customer_side_nav' %>
+<%= render 'partials/customer_info_table' %>
 
-</div>
-            <br>
 
-<div class="site-wrap">
-  <!-- insert the rest of your page markup here -->
-</div>
 
-        <%= link_to "Create New Category", new_role_customer_path %>
+
