--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -12,7 +12,7 @@
       <!--<a class="navbar-brand" href="#">Super Admin Dashboard</a>-->
       <div class="navbar-header">
 
-        <img class="img-responsive" src="/assets/logo_sq.jpg" alt="logo" width="50" height="200">
+        <img class="img-responsive"  alt="Jonny Fresh" width="50" height="100">
       </div>
     </div>
 
