Modification to the admin home page for ticket JFADM-3

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -74,27 +74,27 @@
 <!-- Container (Portfolio Section) -->
 <div id="portfolio" class="container-fluid text-center bg-grey">
   <h2>Portfolio</h2><br>
-  <h4>What we have created</h4>
+  <h4>Where you find us </h4>
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="paris.jpg" alt="Berlin" width="400" height="300">
+        <img src="/assets/Brandenburg-Gate-West-Berlin.jpg" alt="Berlin" width="400" height="300">
         <p><strong>Berlin</strong></p>
-        <p>Yes, we .....</p>
+        <p> .....</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="newyork.jpg" alt="München" width="400" height="300">
+        <img src="/assets/gallery-angelo-westpark-munichtower.jpg" alt="München" width="400" height="300">
         <p><strong>München</strong></p>
-        <p>We clean ......</p>
+        <p>We......</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="sanfran.jpg" alt="Austria" width="400" height="300">
+        <img src="/assets/vienna.jpg" alt="Vienna, Austria" width="400" height="300">
         <p><strong>Austria</strong></p>
-        <p>Yes, Austira.....</p>
+        <p> Austira.....</p>
       </div>
     </div>
   </div><br>
