--- a/app/views/role/customers/edit.html.erb
+++ b/app/views/role/customers/edit.html.erb
@@ -1,3 +1,4 @@
+<%= link_to 'Back', role_customers_url %>
 
 <% provide(:title, 'Customer profile') %>
 <h1>Update customer info</h1>
@@ -18,10 +19,10 @@
         <div><%= label_tag :country_of_residence %><br />
           <%= password_field_tag :country_of_residence,params[:country_of_residence], :placeholder => "country of residence" %></div>
 
-        <div><%= label_tag :role %><br />
-          <%= select_tag :role, options_for_select(['Super admin','Admin','Customer Support', 'Marketing','Shift Supervisor', 'Driver','Others', 'Select Roles'],'Select Roles') %>
+        <!--<div><%= label_tag :role %><br />-->
+          <!--<%#= select_tag :role, options_for_select(['Super admin','Admin','Customer Support', 'Marketing','Shift Supervisor', 'Driver','Others', 'Select Roles'],'Select Roles') %>-->
 
-        </div>
+        <!--</div>-->
       </div>
 
       <div>
