edit option fixes  for customer management for ticket JFADM-5

--- a/app/views/role/customers/edit.html.erb
+++ b/app/views/role/customers/edit.html.erb
@@ -19,7 +19,7 @@
         <div><%= label_tag :country_of_residence %><br />
           <%= password_field_tag :country_of_residence,params[:country_of_residence], :placeholder => "country of residence" %></div>
 
-        <!--<div><%= label_tag :role %><br />-->
+        <!--<div><%#= label_tag :role %><br />-->
           <!--<%#= select_tag :role, options_for_select(['Super admin','Admin','Customer Support', 'Marketing','Shift Supervisor', 'Driver','Others', 'Select Roles'],'Select Roles') %>-->
 
         <!--</div>-->
