--- a/app/views/orders/_list_order.html.erb
+++ b/app/views/orders/_list_order.html.erb
@@ -22,7 +22,7 @@
 
       <%#= @orders.each do|order| %>
       <tr>
-        <td><%=link_to(order.invoice_id , order)%></td>
+        <td><%#=link_to(order.invoice_id , order)%></td>
         <td>ddd</td>
       </tr>
       <tr>
