--- a/app/views/country_managements/_country_side_nav.html.erb
+++ b/app/views/country_managements/_country_side_nav.html.erb
@@ -7,8 +7,8 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
     <ul >
-          <li><a href="#" class="customer-info">Customer Info</a></li> <%#= link_to "Customer Info", role_customers_path %>
-          <li><a href="#" class="default-view"> <%= link_to "Edit Customer Info", edit_role_customer_path(current_user) %></a></li>
+          <li><a href="#" class="country-info">List of Country</a></li> <%#= link_to "Customer Info", role_customers_path %>
+          <li><a href="#" class="default-view"> <%= link_to "Edit country Info", edit_country_management_path(current_user) %></a></li>
           <li><a href="#">View all Product</a></li>
           <li><a href="#">Edit Product</a></li>
           </ul>
