--- a/app/views/driver_managements/index.html.erb
+++ b/app/views/driver_managements/index.html.erb
@@ -1,2 +1,6 @@
-<h1>DriverManagements#index</h1>
-<p>Find me in app/views/driver_managements/index.html.erb</p>
+<!--<div class="clearfix hidden-lg hidden-md "></div>-->
+<a class="sidenav-toggle-btn">
+  <span  style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+</a>
+
+<%= render 'drivers_side_nav' %>
