--- a/app/views/postal_managements/index.html.erb
+++ b/app/views/postal_managements/index.html.erb
@@ -1,2 +1,6 @@
-<h1>PostalManagements#index</h1>
-<p>Find me in app/views/postal_managements/index.html.erb</p>
+<!--<div class="clearfix hidden-lg hidden-md "></div>-->
+<a class="sidenav-toggle-btn">
+  <span  style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+</a>
+
+<%= render 'postal_side_nav' %>
