--- a/app/views/role/super_admin_dashboards/_nav_dash_board.html.erb
+++ b/app/views/role/super_admin_dashboards/_nav_dash_board.html.erb
@@ -12,7 +12,7 @@
       <li><%= link_to "Driver Management", driver_managements_path %></li>
       <li><%= link_to "Country Management", country_managements_path %></li>
       <li><%= link_to "Province Management", province_managements_path %></li>
-      <li><%= link_to "Cities Management", cities_managements_path %></li>
+      <li><%= link_to "City Management", city_managements_path %></li>
       <li><%= link_to "Postalcode Management", postal_managements_path %></li>
       <li><%= link_to "Timewindow Management", time_window_managements_path %></li>
     </ul>
