Info table added to the invoice view for ticket JFADM-8

--- a/app/views/orders/_list_order.html.erb
+++ b/app/views/orders/_list_order.html.erb
@@ -62,7 +62,11 @@
           </thead>
 
           <tbody>
+          <!--<%#= @orders.each do|order| %>-->
+
           <tr>
+            <!--<td><%#=link_to(order.invoice_id , order)%></td>-->
+
             <td>3326</td>
             <td>3343</td>
             <td>10/21/2013</td>
