Schedule management added  to the ticket JFADM-3

--- a/app/views/role/super_admin_dashboards/_nav_dash_board.html.erb
+++ b/app/views/role/super_admin_dashboards/_nav_dash_board.html.erb
@@ -17,6 +17,7 @@
       <li><%= link_to "Timewindow Management", time_window_managements_path %></li>
       <li><%= link_to "Shifts Management", shift_managements_path %></li>
       <li><%= link_to "Trips Management", trip_managements_path %></li>
+      <li><%= link_to "Schedule Management", schedule_managements_path %></li>
     </ul>
 
     <!--</div> &lt;!&ndash;   end of sidebar&ndash;&gt;-->
