side nav added to ticket JFADM-25

--- a/app/views/shift_managements/index.html.erb
+++ b/app/views/shift_managements/index.html.erb
@@ -1,2 +1,6 @@
-<h1>ShiftManagements#index</h1>
-<p>Find me in app/views/shift_managements/index.html.erb</p>
+<a class="sidenav-toggle-btn">
+  <span  style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+</a>
+
+<%= render 'shifts_side_nav' %>
+<%#= render 'plant_info_table' %>
