fixes for ticket- JFADM-13

--- a/app/views/driver_managements/index.html.erb
+++ b/app/views/driver_managements/index.html.erb
@@ -1,7 +1,7 @@
 <!--<div class="clearfix hidden-lg hidden-md "></div>-->
-<a class="sidenav-toggle-btn">
+<div><a class="sidenav-toggle-btn">
   <span  style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-</a>
+</a></div>
 
 <%= render 'drivers_side_nav' %>
 <%= render 'drivers_info_table' %>
