side navigation menu added to ticket - JFADM-27

--- a/app/views/trip_managements/index.html.erb
+++ b/app/views/trip_managements/index.html.erb
@@ -1,2 +1,7 @@
-<h1>TripManagements#index</h1>
-<p>Find me in app/views/trip_managements/index.html.erb</p>
+<!--<div class="clearfix hidden-lg hidden-md "></div>-->
+<a class="sidenav-toggle-btn">
+  <span  style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+</a>
+
+<%= render 'trip_side_nav' %>
+<%#= render 'trip_info_table' %>
